# tagal

./: AUTHORS  Acknowledgement  Config.md  Install.md  LANToolkit.md  Makefile  Makefile.am  Makefile.in  MyResume.md  MyStory.md  OtherWorks.md  PCM.md  PCM_Truth.md  ProjectHome.md  README.md  Screenshot.md  SelfIntro.md  WhyFreeCulture.md  autogen.sh  config.status  configure  configure.ac  configure.scan  libtool  zhCNInstall.md  zhCNsimpled.md
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
for-nautil-actions/: Makefile.am  Makefile.in  add_tags_to_file_wnd.glade  add_tags_to_file_wnd.gladep  glade.tar  libtool
for-nautil-actions/autom4te.cache/: output.0  output.1  output.2  requests  traces.2
for-nautil-actions/glade-files/: add_tags_to_file_wnd.glade
for-nautil-actions/po/: Makefile  POTFILES  POTFILES.in
for-nautil-actions/src/: Makefile  Makefile.in  add_tags_to_file_wnd_cb.c  add_tags_to_file_wnd_if.c  add_tags_to_file_wnd_if.h  callbacks.h  global_var.h  main.c  tags_list.h  tags_list_view.c
for-nautilus-actions/: AUTHORS  Makefile  add_tags_to_file_wnd.glade.bak  config.h  config.status  configure  configure.in  glade.tar.bz2  libtool
for-nautilus-actions/autom4te.cache/: traces.0  traces.1
for-nautilus-actions/glade-files/: add_tags_to_multifiles_wnd.glade
for-nautilus-actions/po/: Makefile.in
for-nautilus-actions/src/: Makefile  Makefile.am  Makefile.in  add_tags_to_file_wnd_cb.c  add_tags_to_file_wnd_cb.h  add_tags_to_multifiles_wnd_cb.c  add_tags_to_multifiles_wnd_cb.h  add_tags_to_multifiles_wnd_if.c  add_tags_to_multifiles_wnd_if.h  config_interface.c  interface.h  main.c  tags_list.c  tags_list_view.h
gtk-tagal/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  libtool
gtk-tagal/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
gtk-tagal/glade_files/: add_files_wnd.glade  tagal_add_tags_to_file_wnd.glade  tagal_main_wnd.glade
gtk-tagal/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  gtk-tagal.pot
gtk-tagal/src/: Makefile  Makefile.am  Makefile.in  add_files_wnd_cb.c  add_files_wnd_cb.h  add_files_wnd_if.c  add_files_wnd_if.h  add_tags_to_file_wnd_cb.c  add_tags_to_file_wnd_cb.h  add_tags_to_file_wnd_if.c  add_tags_to_file_wnd_if.h  callbacks.h  config_interface.c  config_interface.h  files_list.c  files_list.h  files_list_view.c  files_list_view.h  format_search_str.c  format_search_str.h  global_var.h  gtktagal_global.h  interface.h  main.c  main_wnd_cb.c  main_wnd_cb.h  main_wnd_if.c  main_wnd_if.h  tags_list.c  tags_list.h  tags_list_view.c  tags_list_view.h  test.db
include/: config.h  config.h.in  dlist.h
libtagal/: Makefile.am  Makefile.in  db_sqlite.h  db_sqlite_impl.c  db_sqlite_impl.h  dbinterface.c  dbinterface.h  libtagal.c  mempool.c  tables.sql  tagal.h  tagal_errno.h  tagal_test  tagal_test.c  tagaldb.c  tagaldb.h  temp.sql
sqlite/: Makefile  Makefile.in  config.status  libtool  sqlite3.c
src/: Makefile  Makefile.am  Makefile.in  db_sqlite_impl.c  db_sqlite_impl.h  dbinterface.c  dbinterface.h  error.c  global.h  libtagal.c  mempool.h  tagal.h  tagal_test  tagal_test.c  tagaldb.c  temp.sql  test.db
